algo_engine/backtest/c_simmatch_ex.h


typedef enum smm_match_event {
    SMM_EVENT_MATCH        = 0,  
    SMM_EVENT_CANCEL       = 1,  
    SMM_EVENT_PLACED       = 2   
} smm_match_event;
typedef enum smm_ret_code {
    SMM_OK                 =  0,
    SMM_ERR_INVALID_ARG    = -1,
    SMM_ERR_DUPLICATE      = -2,  
    SMM_ERR_NOT_FOUND      = -3,  
    SMM_ERR_NO_VALID_PRICE = -4,
    SMM_ERR_INVALID_SIDE   = -5,
    SMM_ERR_OOM            = -6
} smm_ret_code;
typedef struct smm_order_entry    smm_order_entry;
typedef struct smm_match_ctx      smm_match_ctx;
typedef struct smm_listener       smm_listener;
typedef struct smm_engine_binding smm_engine_binding;
typedef void (*smm_match_callback)(smm_match_ctx* ctx, smm_match_event event, const smm_order_entry* entry, const md_trade_report* report, void* user_data);
static inline int c_smm_match_register(smm_match_ctx* ctx, const smm_engine_binding* binding);
static inline int c_smm_match_unregister(smm_match_ctx* ctx);
static inline int c_smm_match_launch(smm_match_ctx* ctx, md_variant* order_header, PyObject* py_order);
static inline int c_smm_match_cancel(smm_match_ctx* ctx, const long_md_id* order_id);
static inline int c_smm_match_process(smm_match_ctx* ctx, const md_variant* market_data);
static inline int c_smm_match_set_config(smm_match_ctx* ctx, double fee_rate, bool instant_fill, double lag_ts, uint64_t lag_n_transaction, double hit_prob, double slippery_rate, bool incremental_order_volume);
struct smm_order_entry {
    long_md_id       order_id;                        
    md_variant*      header;                          
    PyObject*        py_order;                        
    uint64_t         transaction_count_at_placement;  
    smm_order_entry* next;                            
};
struct smm_listener {
    smm_match_callback callback;  
    void*              user_data;
    uintptr_t          id;  
    smm_listener*      next;
};
struct smm_engine_binding {
    message_queue* mq;                   
    bytemap*       exact_topic_hooks;    
    bytemap*       generic_topic_hooks;  
    evt_topic* launch_topic;     
    evt_hook*  launch_hook;      
    PyObject*  launch_hook_obj;  
    evt_topic* cancel_topic;
    evt_hook*  cancel_hook;
    PyObject*  cancel_hook_obj;
    evt_topic* realtime_topic;
    evt_hook*  realtime_hook;
    PyObject*  realtime_hook_obj;
    evt_topic* on_order_topic;      
    PyObject*  on_order_topic_obj;  
    evt_topic* on_report_topic;
    PyObject*  on_report_topic_obj;
    PyObject* market_data_class;  
};
struct smm_match_ctx {
    allocator_protocol* allocator;  
    double   timestamp;               
    double   last_price;              
    uint64_t last_transaction_count;  
    uint64_t seed;       
    uint64_t rng_state;  
    double   fee_rate;                  
    bool     instant_fill;              
    double   lag_ts;                    
    uint64_t lag_n_transaction;         
    double   hit_prob;                  
    double   slippery_rate;             
    bool     incremental_order_volume;  
    smm_order_entry* working;  
    size_t           n_working;
    size_t           n_history;
    smm_listener* listeners;  
    smm_engine_binding* engine;  
    md_variant ws_report;  
};
static inline int c_smm_match_register_listener(smm_match_ctx* ctx, smm_match_callback callback, void* user_data, uintptr_t* out_id) {
    if (!ctx || !callback) return SMM_ERR_INVALID_ARG;
    smm_listener* node = (smm_listener*) calloc(1, sizeof(smm_listener));
    if (!node) return SMM_ERR_OOM;
    node->callback = callback;
    node->user_data = user_data;
    node->id = (uintptr_t) node;
    if (!ctx->listeners) {
        ctx->listeners = node;
    }
    else {
        smm_listener* tail = ctx->listeners;
        while (tail->next) tail = tail->next;
        tail->next = node;
    }
    if (out_id) *out_id = node->id;
    return SMM_OK;
}
static inline int c_smm_match_deregister_listener(smm_match_ctx* ctx, uintptr_t listener_id) {
    if (!ctx) return SMM_ERR_INVALID_ARG;
    smm_listener* prev = NULL;
    smm_listener* curr = ctx->listeners;
    while (curr) {
        if (curr->id == listener_id) {
            if (prev) prev->next = curr->next;
            else ctx->listeners = curr->next;
            free(curr);
            return SMM_OK;
        }
        prev = curr;
        curr = curr->next;
    }
    return SMM_ERR_NOT_FOUND;
}
static inline void c_smm_match_init(smm_match_ctx* ctx) {
    if (!ctx) return;
    memset(ctx, 0, sizeof(smm_match_ctx));
    ctx->last_price = NAN;
    ctx->hit_prob = 1.0;
    ctx->slippery_rate = 0.0001;
    ctx->rng_state = SMM_RNG_MULTIPLIER;
}
static inline smm_match_ctx* c_smm_match_new(double fee_rate, bool instant_fill, double lag_ts, uint64_t lag_n_transaction, double hit_prob, double slippery_rate, bool incremental_order_volume, allocator_protocol* allocator) {
    smm_match_ctx* ctx = (smm_match_ctx*) c_ap_alloc(sizeof(smm_match_ctx), allocator);
    if (!ctx) return NULL;
    c_smm_match_init(ctx);
    ctx->allocator = allocator;
    c_smm_match_set_config(ctx, fee_rate, instant_fill, lag_ts, lag_n_transaction, hit_prob, slippery_rate, incremental_order_volume);
    return ctx;
}
static inline void c_smm_match_dealloc(smm_match_ctx* ctx) {
    if (!ctx) return;
    smm_order_entry* entry = ctx->working;
    while (entry) {
        smm_order_entry* next = entry->next;
        Py_XDECREF(entry->py_order);
        free(entry);
        entry = next;
    }
    ctx->working = NULL;
    ctx->n_working = 0;
    ctx->n_history = 0;
    smm_listener* listener = ctx->listeners;
    while (listener) {
        smm_listener* next = listener->next;
        free(listener);
        listener = next;
    }
    ctx->listeners = NULL;
    if (ctx->engine) c_smm_match_unregister(ctx);
}
static inline void c_smm_match_free(smm_match_ctx* ctx) {
    if (!ctx) return;
    c_smm_match_dealloc(ctx);
    c_ap_free(ctx);
}
static inline int c_smm_match_set_config(smm_match_ctx* ctx, double fee_rate, bool instant_fill, double lag_ts, uint64_t lag_n_transaction, double hit_prob, double slippery_rate, bool incremental_order_volume) {
    if (!ctx) return SMM_ERR_INVALID_ARG;
    ctx->fee_rate = fee_rate;
    ctx->instant_fill = instant_fill;
    ctx->lag_ts = lag_ts;
    ctx->lag_n_transaction = lag_n_transaction;
    ctx->hit_prob = hit_prob;
    ctx->slippery_rate = slippery_rate;
    ctx->incremental_order_volume = incremental_order_volume;
    return SMM_OK;
}
static inline int c_smm_match_set_seed(smm_match_ctx* ctx, uint64_t seed) {
    if (!ctx) return SMM_ERR_INVALID_ARG;
    c_smm_rng_seed(ctx, seed);
    return SMM_OK;
}
static inline void c_smm_match_clear(smm_match_ctx* ctx) {
    if (!ctx) return;
    double              fee_rate = ctx->fee_rate;
    bool                instant_fill = ctx->instant_fill;
    double              lag_ts = ctx->lag_ts;
    uint64_t            lag_n_transaction = ctx->lag_n_transaction;
    double              hit_prob = ctx->hit_prob;
    double              slippery_rate = ctx->slippery_rate;
    bool                incremental_order_volume = ctx->incremental_order_volume;
    uint64_t            seed = ctx->seed;
    allocator_protocol* allocator = ctx->allocator;
    smm_listener*       listeners = ctx->listeners;  
    smm_engine_binding* engine = ctx->engine;        
    smm_order_entry*    entry = ctx->working;  
    while (entry) {
        smm_order_entry* next = entry->next;
        Py_XDECREF(entry->py_order);
        free(entry);
        entry = next;
    }
    ctx->working = NULL;
    ctx->n_working = 0;
    ctx->n_history = 0;
    c_smm_match_init(ctx);
    ctx->allocator = allocator;
    ctx->listeners = listeners;
    ctx->engine = engine;
    c_smm_match_set_config(ctx, fee_rate, instant_fill, lag_ts, lag_n_transaction, hit_prob, slippery_rate, incremental_order_volume);
    c_smm_rng_seed(ctx, seed);
}
static inline int c_smm_match_register(smm_match_ctx* ctx, const smm_engine_binding* binding) {
    if (!ctx || !binding) return SMM_ERR_INVALID_ARG;
    if (ctx->engine) return SMM_ERR_DUPLICATE;
    if (!binding->mq || !binding->exact_topic_hooks || !binding->generic_topic_hooks) return SMM_ERR_INVALID_ARG;
    if (!binding->launch_topic || !binding->launch_hook || !binding->cancel_topic || !binding->cancel_hook || !binding->realtime_topic || !binding->realtime_hook) return SMM_ERR_INVALID_ARG;
    smm_engine_binding* eng = (smm_engine_binding*) calloc(1, sizeof(smm_engine_binding));
    if (!eng) return SMM_ERR_OOM;
    *eng = *binding;
    evt_topic* topics[3] = {binding->launch_topic, binding->cancel_topic, binding->realtime_topic};
    PyObject*  hook_objs[3] = {binding->launch_hook_obj, binding->cancel_hook_obj, binding->realtime_hook_obj};
    for (size_t i = 0; i < 3; i++) {
        if (!topics[i] || !hook_objs[i]) {
            free(eng);
            return SMM_ERR_INVALID_ARG;
        }
        bytemap* map = topics[i]->is_exact ? eng->exact_topic_hooks : eng->generic_topic_hooks;
        c_bytemap_set(map, topics[i]->key, topics[i]->key_len, (void*) hook_objs[i], NULL);
        Py_INCREF(hook_objs[i]);  
    }
    evt_hook* hooks[3] = {binding->launch_hook, binding->cancel_hook, binding->realtime_hook};
    for (size_t i = 0; i < 3; i++) {
        if (c_evt_hook_register_callback(hooks[i], (const void*) c_smm_evt_handler, EVT_CALLBACK_WITH_PAYLOAD_USERDATA, ctx, 1) != EVT_RET_OK) {
            goto fail;
        }
    }
    Py_XINCREF(eng->on_order_topic_obj);
    Py_XINCREF(eng->on_report_topic_obj);
    PyObject* md_module = PyImport_ImportModule("algo_engine.base.c_market_data.c_market_data");
    if (!md_module) {
        PyErr_Clear();
        goto fail;
    }
    eng->market_data_class = PyObject_GetAttrString(md_module, "MarketData");
    Py_DECREF(md_module);
    if (!eng->market_data_class) {
        PyErr_Clear();
        goto fail;
    }
    ctx->engine = eng;
    return SMM_OK;
fail:
    for (size_t i = 0; i < 3; i++) {
        bytemap*  map = topics[i]->is_exact ? eng->exact_topic_hooks : eng->generic_topic_hooks;
        PyObject* hook_obj = NULL;
        c_bytemap_pop(map, topics[i]->key, topics[i]->key_len, (void**) &hook_obj);
        Py_XDECREF(hook_obj);
    }
    Py_XDECREF(eng->on_order_topic_obj);
    Py_XDECREF(eng->on_report_topic_obj);
    Py_XDECREF(eng->market_data_class);
    free(eng);
    return SMM_ERR_OOM;
}
static inline int c_smm_match_unregister(smm_match_ctx* ctx) {
    if (!ctx || !ctx->engine) return SMM_ERR_INVALID_ARG;
    smm_engine_binding* eng = ctx->engine;
    evt_hook* hooks[3] = {eng->launch_hook, eng->cancel_hook, eng->realtime_hook};
    for (size_t h = 0; h < 3; h++) {
        evt_hook* hook = hooks[h];
        if (!hook) continue;
        for (size_t i = 0; i < hook->n_callbacks; i++) {
            evt_callback* cb = &hook->callbacks[i];
            if (cb->type == EVT_CALLBACK_WITH_PAYLOAD_USERDATA && cb->fn.with_payload_userdata == c_smm_evt_handler && cb->user_data == ctx) {
                c_evt_hook_pop_callback(hook, i);
                break;
            }
        }
    }
    evt_topic* topics[3] = {eng->launch_topic, eng->cancel_topic, eng->realtime_topic};
    for (size_t t = 0; t < 3; t++) {
        evt_topic* topic = topics[t];
        if (!topic) continue;
        bytemap*  map = topic->is_exact ? eng->exact_topic_hooks : eng->generic_topic_hooks;
        PyObject* hook_obj = NULL;
        c_bytemap_pop(map, topic->key, topic->key_len, (void**) &hook_obj);
        Py_XDECREF(hook_obj);
    }
    Py_XDECREF(eng->on_order_topic_obj);
    Py_XDECREF(eng->on_report_topic_obj);
    Py_XDECREF(eng->market_data_class);
    free(eng);
    ctx->engine = NULL;
    return SMM_OK;
}
static inline int c_smm_match_launch(smm_match_ctx* ctx, md_variant* order_header, PyObject* py_order) {
    if (!ctx || !order_header) return SMM_ERR_INVALID_ARG;
    md_trade_instruction* order = &order_header->trade_instruction;
    if (c_smm_find_entry(ctx, &order->order_id)) return SMM_ERR_DUPLICATE;
    c_smm_allocator(ctx, order_header);
    order->order_state = STATE_PLACED;
    order->ts_placed = ctx->timestamp;
    smm_order_entry* entry = (smm_order_entry*) calloc(1, sizeof(smm_order_entry));
    if (!entry) return SMM_ERR_OOM;
    entry->order_id = order->order_id;
    entry->header = order_header;
    entry->py_order = py_order;
    Py_XINCREF(py_order);
    entry->transaction_count_at_placement = ctx->last_transaction_count;
    entry->next = ctx->working;
    ctx->working = entry;
    ctx->n_working++;
    c_smm_match_fire(ctx, SMM_EVENT_PLACED, entry, NULL);
    if (ctx->engine && entry->py_order) {
        c_smm_publish(ctx, ctx->engine->on_order_topic, ctx->engine->on_order_topic_obj, "order", entry->py_order);
    }
    if (c_smm_short_circuit(ctx, order)) {
        double worst;
        if (isnan(order->limit_price)) {
            worst = ctx->last_price;
        }
        else {
            int8_t sign = c_md_side_sign(order->side);
            worst = (sign > 0) ? fmax(order->limit_price, ctx->last_price)
                               : fmin(order->limit_price, ctx->last_price);
        }
        c_smm_try_match(ctx, entry, NAN, worst);
    }
    return SMM_OK;
}
static inline int c_smm_match_cancel(smm_match_ctx* ctx, const long_md_id* order_id) {
    if (!ctx || !order_id) return SMM_ERR_INVALID_ARG;
    smm_order_entry* entry = c_smm_find_entry(ctx, order_id);
    if (!entry) return SMM_ERR_NOT_FOUND;
    md_trade_instruction* order = &entry->header->trade_instruction;
    PyObject*             py_order = entry->py_order;
    Py_XINCREF(py_order);
    if (order->order_state != STATE_FILLED) {
        order->order_state = STATE_CANCELED;
        order->ts_canceled = ctx->timestamp;
    }
    c_smm_match_fire(ctx, SMM_EVENT_CANCEL, entry, NULL);
    c_smm_remove_entry(ctx, entry);
    if (ctx->engine && py_order) {
        c_smm_publish(ctx, ctx->engine->on_order_topic, ctx->engine->on_order_topic_obj, "order", py_order);
    }
    Py_XDECREF(py_order);
    return SMM_OK;
}
static inline void c_smm_match_eod(smm_match_ctx* ctx) {
    if (!ctx) return;
    smm_order_entry* entry = ctx->working;
    while (entry) {
        smm_order_entry* next = entry->next;
        c_smm_match_cancel(ctx, &entry->order_id);
        entry = next;
    }
}
static inline int c_smm_match_process(smm_match_ctx* ctx, const md_variant* market_data) {
    if (!ctx || !market_data) return SMM_ERR_INVALID_ARG;
    c_smm_allocator(ctx, market_data);
    ctx->timestamp = market_data->meta_info.timestamp;
    ctx->last_price = c_md_get_price(market_data);
    switch (market_data->meta_info.dtype) {
        case DTYPE_TRANSACTION:
            ctx->last_transaction_count += 1;
            c_smm_check_trade(ctx, market_data);
            break;
        case DTYPE_BAR:
            c_smm_check_bar(ctx, market_data);
            break;
        case DTYPE_TICK:
            c_smm_check_tick(ctx, market_data);
            break;
        case DTYPE_TICK_LITE:
            c_smm_check_tick_lite(ctx, market_data);
            break;
        case DTYPE_ORDER:
            if (ctx->incremental_order_volume) c_smm_check_order(ctx, market_data);
            break;
        default:
            break;
    }
    return SMM_OK;
}
static inline int c_smm_match_best_price(const double* prices, size_t n, int8_t sign, double* out) {
    if (!prices || !out) return SMM_ERR_INVALID_ARG;
    double best = NAN;
    size_t count = 0u;
    for (size_t i = 0u; i < n; i++) {
        double p = prices[i];
        if (!isfinite(p)) continue;
        if (count == 0u) {
            best = p;
            count = 1u;
        }
        else if (sign > 0) {
            if (p < best) best = p;
        }
        else if (sign < 0) {
            if (p > best) best = p;
        }
        else {
            return SMM_ERR_INVALID_SIDE;
        }
    }
    if (count == 0u) return SMM_ERR_NO_VALID_PRICE;
    *out = best;
    return SMM_OK;
}
static inline int c_smm_match_worst_price(const double* prices, size_t n, int8_t sign, double* out) {
    if (!prices || !out) return SMM_ERR_INVALID_ARG;
    double worst = NAN;
    size_t count = 0u;
    for (size_t i = 0u; i < n; i++) {
        double p = prices[i];
        if (!isfinite(p)) continue;
        if (count == 0u) {
            worst = p;
            count = 1u;
        }
        else if (sign > 0) {
            if (p > worst) worst = p;
        }
        else if (sign < 0) {
            if (p < worst) worst = p;
        }
        else {
            return SMM_ERR_INVALID_SIDE;
        }
    }
    if (count == 0u) return SMM_ERR_NO_VALID_PRICE;
    *out = worst;
    return SMM_OK;
}